perf(voices): Parallelize VoiceBuffer creation